tests/verifier/fail/test8.ial
function void foo2()
{
    block entry
    {
        raw (00, 01, 02, 03);
    }

    block bar
    {
        leave;
    }
}
